--- a/tunes/Makefile
+++ b/tunes/Makefile
@@ -3,11 +3,14 @@ FLAGS=-Wall -O3 -ffast-math
 COMMON_DEPS=../libgeep.a notes.h ../geep.h
 
 .PHONY : all
-all : sailormoon zelda
+all : sailormoon tuxedomask zelda
 
 default : all
 
 sailormoon : sailormoon.c ${COMMON_DEPS}
+	${CC} ${FLAGS} -o $@ $^
+
+tuxedomask : tuxedomask.c ${COMMON_DEPS}
 	${CC} ${FLAGS} -o $@ $^
 
 zelda : zelda.c ${COMMON_DEPS}
