--- a/gui/Makefile
+++ b/gui/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-Wall -O3 `pkg-config --cflags gtk+-3.0`
 LDFLAGS=`pkg-config --libs gtk+-3.0`
 
 .PHONY : all
-all : table
+all : geepui
 
 default : all
 
