--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-Wall -O3 `pkg-config --cflags gtk+-3.0`
+CFLAGS=-Wall -g `pkg-config --cflags gtk+-3.0`
 LDFLAGS=`pkg-config --libs gtk+-3.0`
 
 .PHONY : all
