WIP tri-state buttons

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-Wall -g `pkg-config --cflags gtk+-3.0`
+CFLAGS=-Wall -g  `pkg-config --cflags gtk+-3.0`
 LDFLAGS=`pkg-config --libs gtk+-3.0`
 
 .PHONY : all
@@ -10,7 +10,7 @@ default : all
 geepui : geepui.o drawing.o note_grid.o
 	${CC} ${CFLAGS} -o $@ $^ ${LDFLAGS}
 
-%.o : %.c notes.h
+%.o : %.c notes.h Makefile
 	${CC} ${CFLAGS} -c -o $@ $<
 
 clean :
