Made note grid follow user theme and fixing save/export

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-Wall -O3  `pkg-config --cflags gtk+-3.0`
+CFLAGS=-Wall -g `pkg-config --cflags gtk+-3.0`
 LDFLAGS=`pkg-config --libs gtk+-3.0`
 
 .PHONY : all
@@ -7,7 +7,7 @@ all : geepui
 
 default : all
 
-geepui : *.o
+geepui : geepui.o drawing.o notes.o note_grid.o
 	${CC} ${CFLAGS} -o $@ $^ ${LDFLAGS}
 
 %.o : %.c *.h Makefile
